[project]
name = "streamlit-headers-inspector"
version = "0.1.0"
description = "A Streamlit app that displays HTTP headers with focus on X-Forwarded-For"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
]
